# pixelcore

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish.yml
hooks/: commit-msg  commit_msg.py
src/pixelcore/: exceptions.py
src/pixelcore/core/: enums.py
