[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelcore"
version = "0.0.1"
description = "Core image and video processing primitives"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Rishabh Sethi" }
]

[project.urls]
Homepage = "https://github.com/cruvdev/pixelcore"
Repository = "https://github.com/cruvdev/pixelcore"
